# catdns

./: Cargo.toml  README.md  china_domains.txt  compile.sh  config.json
.github/workflows/: release.yml
src/: api.rs  cache.rs  config.rs  domain_matcher.rs  handler.rs  history.rs  main.rs  server.rs  upstream.rs  web_ui.rs
tests/: integration_test.rs
