[package]
name = "catdns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
hickory-client = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
lru = "0.14"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
bytes = "1"
parking_lot = "0.12"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
arc-swap = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
